Fixed message banner and page overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,6 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Gorditas', cursive;
-    padding-top: 70px;
 }
 
 .logo {
@@ -22,6 +21,28 @@ body {
     justify-content: center;
     height: 2rem;
     width: 2rem;
+}
+
+
+.shop-now-button {
+    background: black;
+    color: white;
+    min-width: 260px;
+}
+
+.btn-black {
+    background: black;
+    color: white;
+}
+
+.shop-now-button:hover,
+.shop-now-button:active,
+.shop-now-button:focus,
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+    background: #222;
+    color: white;
 }
 
 .dropdown-toggle::after {
@@ -60,6 +81,10 @@ body {
 
 .heather{
     background-color: #a693b5;
+}
+
+#message-banner{
+    background-color: black;
 }
 
 .hero-image {
